@@ -1,112 +1,0 @@
-
-#
-# 1. Edit include/Makefile.build and replace Makefile.module with
-#    Makefile.win32
-# 
-# 2. Update TCLPATH and VC varibales below to reflect actual path to
-#    Tcl and VicualC++ installations
-#   
-# 3. nmake -f Makefile.win32
-#
-#    or
-#
-#    nmake -f Makefile.win32 TCLPATH=c:\tcl VC=c:\vc
-#
-#
-
-
-
-#
-# Set path where Tcl is installed
-#
-
-TCLPATH	= C:\Naviserver
-TCLLIB  = tcl84t.lib
-
-#
-# Set path to the Visual Studio compiler
-#
-
-VC	= C:\Program Files\Microsoft Visual Studio 8\VC
-
-LIB	= $(VC)\Lib;$(VC)\PlatformSDK\Lib;$(TCLPATH)\Lib
-INCLUDE	= $(VC)\ATLMFC\Include;$(VC)\Include;$(VC)\PlatformSDK\Include;$(TCLPATH)\Include
-
-
-#
-# nmake command to exec for each module
-#
-
-NMAKE	= nmake /nologo /e TCLPATH="$(TCLPATH)" TCLLIB="$(TCLLIB)" LIB="$(LIB)" DEBUG=$(DEBUG)
-
-
-#
-# Build all core modules
-#
-all: 
-	cd nsthread
-	$(NMAKE)
-	cd ..\nsd
-	$(NMAKE)
-	cd ..\nscgi
-	$(NMAKE)
-	cd ..\nscp
-	$(NMAKE)
-	cd ..\nsdb
-	$(NMAKE)
-	cd ..\nssock
-	$(NMAKE)
-	cd ..\nslog
-	$(NMAKE)
-	cd ../nsperm
-	$(NMAKE)
-	cd ..
-
-#
-# Install to NAVISERVER directory
-#
-install:
-	cd nsthread
-	$(NMAKE) install
-	cd ../nsd
-	$(NMAKE) install
-	cd ../nscgi
-	$(NMAKE) install
-	cd ../nscp
-	$(NMAKE) install
-	cd ../nsdb
-	$(NMAKE) install
-	cd ../nssock
-	$(NMAKE) install
-	cd ../nslog
-	$(NMAKE) install
-	cd ../nsperm
-	$(NMAKE) install
-	cd ../tcl
-	nmake -f ../include/Makefile.win32 install-tcl 
-	cd ../include
-	nmake -f Makefile.win32 install-include
-	cd ..
-
-#
-# Cleanup all directories
-#
-clean:
-	cd nsthread
-	$(NMAKE) clean
-	cd ../nsd
-	$(NMAKE) clean
-	cd ../nscgi
-	$(NMAKE) clean
-	cd ../nscp
-	$(NMAKE) clean
-	cd ../nsdb
-	$(NMAKE) clean
-	cd ../nssock
-	$(NMAKE) clean
-	cd ../nslog
-	$(NMAKE) clean
-	cd ../nsperm
-	$(NMAKE) clean
-	cd ..
-
