@@ -30,7 +30,6 @@
 # $Header$
 #
 
-DLL	 =  nslog
 MOD      =  nslog.so
 OBJS     =  nslog.o
 include  ../include/Makefile.build
